BE-370 & BE-396 Rename column genesis_block_hash
Reverted config.json
Changed accordingly to comments
Rename column genesis_block_hash to channel_genesis_hash
