# app/explorer/rest/dbroutes.js
@@ -8,10 +8,10 @@ const dbroutes = (app, persist) => {
   var statusMetrics = persist.getMetricService();
   var crudService = persist.getCrudService();
 
-  app.get("/api/status/:channel", function (req, res) {
-    let channelName = req.params.channel;
-    if (channelName) {
-      statusMetrics.getStatus(channelName, function (data) {
+  app.get("/api/status/:channel_genesis_hash", function (req, res) {
+    let channel_genesis_hash = req.params.channel_genesis_hash;
+    if (channel_genesis_hash) {
+      statusMetrics.getStatus(channel_genesis_hash, function (data) {
         if (
           data &&
           (data.chaincodeCount &&
@@ -31,18 +31,18 @@ const dbroutes = (app, persist) => {
   /***
   Transaction count
   GET /api/block/get -> /api/block/transactions/
-  curl -i 'http://<host>:<port>/api/block/transactions/<channel>/<number>'
+  curl -i 'http://<host>:<port>/api/block/transactions/<channel_genesis_hash>/<number>'
   Response:
   {
     "number": 2,
     "txCount": 1
   }
   */
-  app.get("/api/block/transactions/:channel/:number", async function (req, res) {
+  app.get("/api/block/transactions/:channel_genesis_hash/:number", async function (req, res) {
     let number = parseInt(req.params.number);
-    let channelName = req.params.channel;
-    if (!isNaN(number) && channelName) {
-        var row = await crudService.getTxCountByBlockNum(channelName,number);
+    let channel_genesis_hash = req.params.channel_genesis_hash;
+    if (!isNaN(number) && channel_genesis_hash) {
+        var row = await crudService.getTxCountByBlockNum(channel_genesis_hash,number);
         if (row) {
             return res.send({
               status: 200,
@@ -61,7 +61,7 @@ const dbroutes = (app, persist) => {
   /***
   Transaction Information
   GET /api/tx/getinfo -> /api/transaction/<txid>
-  curl -i 'http://<host>:<port>/api/transaction/<channel>/<txid>'
+  curl -i 'http://<host>:<port>/api/transaction/<channel_genesis_hash>/<txid>'
   Response:
   {
     "tx_id": "header.channel_header.tx_id",
@@ -71,11 +71,11 @@ const dbroutes = (app, persist) => {
   }
   */
 
-  app.get("/api/transaction/:channel/:txid", function (req, res) {
+  app.get("/api/transaction/:channel_genesis_hash/:txid", function (req, res) {
     let txid = req.params.txid;
-    let channelName = req.params.channel;
-    if (txid && txid != "0" && channelName) {
-        crudService.getTransactionByID(channelName, txid).then(row => {
+    let channel_genesis_hash = req.params.channel_genesis_hash;
+    if (txid && txid != "0" && channel_genesis_hash) {
+        crudService.getTransactionByID(channel_genesis_hash, txid).then(row => {
         if (row) {
           return res.send({ status: 200, row });
         }
@@ -89,22 +89,22 @@ const dbroutes = (app, persist) => {
   /***
   Transaction list
   GET /api/txList/
-  curl -i 'http://<host>:<port>/api/txList/<channel>/<blocknum>/<txid>/<limitrows>/<offset>'
+  curl -i 'http://<host>:<port>/api/txList/<channel_genesis_hash>/<blocknum>/<txid>/<limitrows>/<offset>'
   Response:
   {"rows":[{"id":56,"channelname":"mychannel","blockid":24,
   "txhash":"c42c4346f44259628e70d52c672d6717d36971a383f18f83b118aaff7f4349b8",
   "createdt":"2018-03-09T19:40:59.000Z","chaincodename":"mycc"}]}
   */
-  app.get("/api/txList/:channel/:blocknum/:txid", function (req, res) {
-    let channelName = req.params.channel;
+  app.get("/api/txList/:channel_genesis_hash/:blocknum/:txid", function (req, res) {
+    let channel_genesis_hash = req.params.channel_genesis_hash;
     let blockNum = parseInt(req.params.blocknum);
     let txid = parseInt(req.params.txid);
 
     if (isNaN(txid)) {
       txid = 0;
     }
-    if (channelName) {
-      crudService.getTxList(channelName, blockNum, txid).then(rows => {
+    if (channel_genesis_hash) {
+      crudService.getTxList(channel_genesis_hash, blockNum, txid).then(rows => {
         if (rows) {
           return res.send({ status: 200, rows });
         }
@@ -117,7 +117,7 @@ const dbroutes = (app, persist) => {
 
   /***Peer List
   GET /peerlist -> /api/peers
-  curl -i 'http://<host>:<port>/api/peers/<channel>'
+  curl -i 'http://<host>:<port>/api/peers/<channel_genesis_hash>'
   Response:
   [
     {
@@ -126,10 +126,10 @@ const dbroutes = (app, persist) => {
     }
   ]
   */
-  app.get("/api/peers/:channel", function (req, res) {
-    let channelName = req.params.channel;
-    if (channelName) {
-      statusMetrics.getPeerList(channelName, function (data) {
+  app.get("/api/peers/:channel_genesis_hash", function (req, res) {
+    let channel_genesis_hash = req.params.channel_genesis_hash;
+    if (channel_genesis_hash) {
+      statusMetrics.getPeerList(channel_genesis_hash, function (data) {
         res.send({ status: 200, peers: data });
       });
     } else {
@@ -141,7 +141,7 @@ const dbroutes = (app, persist) => {
   /***
    List of blocks and transaction list per block
   GET /api/blockAndTxList
-  curl -i 'http://<host>:<port>/api/blockAndTxList/channel/<blockNum>/<limitrows>/<offset>'
+  curl -i 'http://<host>:<port>/api/blockAndTxList/channel_genesis_hash/<blockNum>/<limitrows>/<offset>'
   Response:
   {"rows":[{"id":51,"blocknum":50,"datahash":"374cceda1c795e95fc31af8f137feec8ab6527b5d6c85017dd8088a456a68dee",
   "prehash":"16e76ca38975df7a44d2668091e0d3f05758d6fbd0aab76af39f45ad48a9c295","channelname":"mychannel","txcount":1,
@@ -149,11 +149,11 @@ const dbroutes = (app, persist) => {
   *
   */
 
-  app.get("/api/blockAndTxList/:channel/:blocknum", function (req, res) {
-    let channelName = req.params.channel;
+  app.get("/api/blockAndTxList/:channel_genesis_hash/:blocknum", function (req, res) {
+    let channel_genesis_hash = req.params.channel_genesis_hash;
     let blockNum = parseInt(req.params.blocknum);
-    if (channelName && !isNaN(blockNum)) {
-      crudService.getBlockAndTxList(channelName, blockNum).then(rows => {
+    if (channel_genesis_hash && !isNaN(blockNum)) {
+      crudService.getBlockAndTxList(channel_genesis_hash, blockNum).then(rows => {
         if (rows) {
           return res.send({ status: 200, rows });
         }
@@ -170,19 +170,19 @@ const dbroutes = (app, persist) => {
   /***
    Transactions per minute with hour interval
   GET /api/txByMinute
-  curl -i 'http://<host>:<port>/api/txByMinute/<channel>/<hours>'
+  curl -i 'http://<host>:<port>/api/txByMinute/<channel_genesis_hash>/<hours>'
   Response:
   {"rows":[{"datetime":"2018-03-13T17:46:00.000Z","count":"0"},{"datetime":"2018-03-13T17:47:00.000Z","count":"0"},{"datetime":"2018-03-13T17:48:00.000Z","count":"0"},{"datetime":"2018-03-13T17:49:00.000Z","count":"0"},{"datetime":"2018-03-13T17:50:00.000Z","count":"0"},{"datetime":"2018-03-13T17:51:00.000Z","count":"0"},
   {"datetime":"2018-03-13T17:52:00.000Z","count":"0"},{"datetime":"2018-03-13T17:53:00.000Z","count":"0"}]}
 
   */
 
-  app.get("/api/txByMinute/:channel/:hours", function (req, res) {
-    let channelName = req.params.channel;
+  app.get("/api/txByMinute/:channel_genesis_hash/:hours", function (req, res) {
+    let channel_genesis_hash = req.params.channel_genesis_hash;
     let hours = parseInt(req.params.hours);
 
-    if (channelName && !isNaN(hours)) {
-      statusMetrics.getTxByMinute(channelName, hours).then(rows => {
+    if (channel_genesis_hash && !isNaN(hours)) {
+      statusMetrics.getTxByMinute(channel_genesis_hash, hours).then(rows => {
         if (rows) {
           return res.send({ status: 200, rows });
         }
@@ -196,18 +196,18 @@ const dbroutes = (app, persist) => {
   /***
    Transactions per hour(s) with day interval
   GET /api/txByHour
-  curl -i 'http://<host>:<port>/api/txByHour/<channel>/<days>'
+  curl -i 'http://<host>:<port>/api/txByHour/<channel_genesis_hash>/<days>'
   Response:
   {"rows":[{"datetime":"2018-03-12T19:00:00.000Z","count":"0"},
   {"datetime":"2018-03-12T20:00:00.000Z","count":"0"}]}
   */
 
-  app.get("/api/txByHour/:channel/:days", function (req, res) {
-    let channelName = req.params.channel;
+  app.get("/api/txByHour/:channel_genesis_hash/:days", function (req, res) {
+    let channel_genesis_hash = req.params.channel_genesis_hash;
     let days = parseInt(req.params.days);
 
-    if (channelName && !isNaN(days)) {
-      statusMetrics.getTxByHour(channelName, days).then(rows => {
+    if (channel_genesis_hash && !isNaN(days)) {
+      statusMetrics.getTxByHour(channel_genesis_hash, days).then(rows => {
         if (rows) {
           return res.send({ status: 200, rows });
         }
@@ -223,18 +223,18 @@ const dbroutes = (app, persist) => {
   /***
    Blocks per minute with hour interval
   GET /api/blocksByMinute
-  curl -i 'http://<host>:<port>/api/blocksByMinute/<channel>/<hours>'
+  curl -i 'http://<host>:<port>/api/blocksByMinute/<channel_genesis_hash>/<hours>'
   Response:
   {"rows":[{"datetime":"2018-03-13T19:59:00.000Z","count":"0"}]}
 
   */
 
-  app.get("/api/blocksByMinute/:channel/:hours", function (req, res) {
-    let channelName = req.params.channel;
+  app.get("/api/blocksByMinute/:channel_genesis_hash/:hours", function (req, res) {
+    let channel_genesis_hash = req.params.channel_genesis_hash;
     let hours = parseInt(req.params.hours);
 
-    if (channelName && !isNaN(hours)) {
-      statusMetrics.getBlocksByMinute(channelName, hours).then(rows => {
+    if (channel_genesis_hash && !isNaN(hours)) {
+      statusMetrics.getBlocksByMinute(channel_genesis_hash, hours).then(rows => {
         if (rows) {
           return res.send({ status: 200, rows });
         }
@@ -248,18 +248,18 @@ const dbroutes = (app, persist) => {
   /***
    Blocks per hour(s) with day interval
   GET /api/blocksByHour
-  curl -i 'http://<host>:<port>/api/blocksByHour/<channel>/<days>'
+  curl -i 'http://<host>:<port>/api/blocksByHour/<channel_genesis_hash>/<days>'
   Response:
   {"rows":[{"datetime":"2018-03-13T20:00:00.000Z","count":"0"}]}
 
   */
 
-  app.get("/api/blocksByHour/:channel/:days", function (req, res) {
-    let channelName = req.params.channel;
+  app.get("/api/blocksByHour/:channel_genesis_hash/:days", function (req, res) {
+    let channel_genesis_hash = req.params.channel_genesis_hash;
     let days = parseInt(req.params.days);
 
-    if (channelName && !isNaN(days)) {
-      statusMetrics.getBlocksByHour(channelName, days).then(rows => {
+    if (channel_genesis_hash && !isNaN(days)) {
+      statusMetrics.getBlocksByHour(channel_genesis_hash, days).then(rows => {
         if (rows) {
           return res.send({ status: 200, rows });
         }
@@ -273,16 +273,16 @@ const dbroutes = (app, persist) => {
   /***
    Transactions by Organization(s)
   GET /api/txByOrg
-  curl -i 'http://<host>:<port>/api/txByOrg/<channel>'
+  curl -i 'http://<host>:<port>/api/txByOrg/<channel_genesis_hash>'
   Response:
   {"rows":[{"count":"4","creator_msp_id":"Org1"}]}
 
   */
-  app.get("/api/txByOrg/:channel", function (req, res) {
-    let channelName = req.params.channel;
+  app.get("/api/txByOrg/:channel_genesis_hash", function (req, res) {
+    let channel_genesis_hash = req.params.channel_genesis_hash;
 
-    if (channelName) {
-      statusMetrics.getTxByOrgs(channelName).then(rows => {
+    if (channel_genesis_hash) {
+      statusMetrics.getTxByOrgs(channel_genesis_hash).then(rows => {
         if (rows) {
           return res.send({ status: 200, rows });
         }
