# swagger.json
@@ -59,7 +59,7 @@
                 }
             }
         },
-        "/status/{channelName}": {
+        "/status/{channel_genesis_hash}": {
             "get": {
                 "tags": [
                     "Channel"
@@ -68,9 +68,9 @@
                 "description": "Query to get BlockCount on a channel",
                 "parameters": [
                     {
-                        "name": "channelName",
+                        "name": "channel_genesis_hash",
                         "in": "path",
-                        "description": "genesis_block_hash",
+                        "description": "channel_genesis_hash",
                         "required": true,
                         "type": "string"
                     }
@@ -128,7 +128,7 @@
                 }
             }
         },
-        "/changeChannel/{channelName}": {
+        "/changeChannel/{channel_genesis_hash}": {
             "get": {
                 "tags": [
                     "Channel"
@@ -137,9 +137,9 @@
                 "description": "Query to get Change Channel on a channel",
                 "parameters": [
                     {
-                        "name": "channelName",
+                        "name": "channel_genesis_hash",
                         "in": "path",
-                        "description": "genesis_block_hash",
+                        "description": "channel_genesis_hash",
                         "required": true,
                         "type": "string"
                     }
@@ -160,7 +160,7 @@
                 }
             }
         },
-        "/chaincode/{channelName}": {
+        "/chaincode/{channel_genesis_hash}": {
             "get": {
                 "tags": [
                     "Chaincodes"
@@ -169,9 +169,9 @@
                 "description": "Query to fetch all Installed/instantiated chaincodes",
                 "parameters": [
                     {
-                        "name": "channelName",
+                        "name": "channel_genesis_hash",
                         "in": "path",
-                        "description": "genesis_block_hash",
+                        "description": "channel_genesis_hash",
                         "required": true,
                         "type": "string"
                     }
@@ -349,7 +349,7 @@
                 }
             }
         },
-        "/block/{channelName}/{number}": {
+        "/block/{channel_genesis_hash}/{number}": {
             "get": {
                 "tags": [
                     "Blocks"
@@ -358,9 +358,9 @@
                 "description": "Query to Fetch Blocks",
                 "parameters": [
                     {
-                        "name": "channelName",
+                        "name": "channel_genesis_hash",
                         "in": "path",
-                        "description": "genesis_block_hash",
+                        "description": "channel_genesis_hash",
                         "required": true,
                         "type": "string"
                     },
@@ -430,7 +430,7 @@
                 }
             }
         },
-        "/block/transactions/{channelName}/{number}": {
+        "/block/transactions/{channel_genesis_hash}/{number}": {
             "get": {
                 "tags": [
                     "Transactions"
@@ -439,9 +439,9 @@
                 "description": "Query to Fetch Block Transactions",
                 "parameters": [
                     {
-                        "name": "channelName",
+                        "name": "channel_genesis_hash",
                         "in": "path",
-                        "description": "genesis_block_hash",
+                        "description": "channel_genesis_hash",
                         "required": true,
                         "type": "string"
                     },
@@ -480,7 +480,7 @@
                 }
             }
         },
-        "/transaction/{channelName}/{txid}": {
+        "/transaction/{channel_genesis_hash}/{txid}": {
             "get": {
                 "tags": [
                     "Transactions"
@@ -491,7 +491,7 @@
                     {
                         "name": "channelName",
                         "in": "path",
-                        "description": "genesis_block_hash",
+                        "description": "channel_genesis_hash",
                         "required": true,
                         "type": "string"
                     },
@@ -577,7 +577,7 @@
                 }
             }
         },
-        "/txList/{channelName}/{number}/{txid}": {
+        "/txList/{channel_genesis_hash}/{number}/{txid}": {
             "get": {
                 "tags": [
                     "Transactions"
@@ -588,7 +588,7 @@
                     {
                         "name": "channelName",
                         "in": "path",
-                        "description": "gensis_block_hash",
+                        "description": "channel_gensis_hash",
                         "required": true,
                         "type": "string"
                     },
@@ -657,7 +657,7 @@
                 }
             }
         },
-        "/peers/{channelName}": {
+        "/peers/{channel_genesis_hash}": {
             "get": {
                 "tags": [
                     "Channel"
@@ -668,7 +668,7 @@
                     {
                         "name": "channelName",
                         "in": "path",
-                        "description": "genesis_block_hash",
+                        "description": "channel_genesis_hash",
                         "required": true,
                         "type": "string"
                     }
@@ -762,7 +762,7 @@
                 }
             }
         },
-        "/blockAndTxList/{channelName}/{number}": {
+        "/blockAndTxList/{channel_genesis_hash}/{number}": {
             "get": {
                 "tags": [
                     "Transactions"
@@ -773,7 +773,7 @@
                     {
                         "name": "channelName",
                         "in": "path",
-                        "description": "genesis_block_hash",
+                        "description": "channel_genesis_hash",
                         "required": true,
                         "type": "string"
                     },
@@ -850,7 +850,7 @@
                 }
             }
         },
-        "/txByMinute/{channelName}/{hours}": {
+        "/txByMinute/{channel_genesis_hash}/{hours}": {
             "get": {
                 "tags": [
                     "Transactions"
@@ -859,9 +859,9 @@
                 "description": "Query to Get Trasaction By Minute",
                 "parameters": [
                     {
-                        "name": "channelName",
+                        "name": "channel_genesis_hash",
                         "in": "path",
-                        "description": "genesis_block_hash",
+                        "description": "channel_genesis_hash",
                         "required": true,
                         "type": "string"
                     },
@@ -900,7 +900,7 @@
                 }
             }
         },
-        "/txByHour/{channelName}/{days}": {
+        "/txByHour/{channel_genesis_hash}/{days}": {
             "get": {
                 "tags": [
                     "Transactions"
@@ -909,9 +909,9 @@
                 "description": "Queryto  Get Trasaction BY Hour",
                 "parameters": [
                     {
-                        "name": "channelName",
+                        "name": "channel_genesis_hash",
                         "in": "path",
-                        "description": "genesis_block_hash",
+                        "description": "channel_genesis_hash",
                         "required": true,
                         "type": "string"
                     },
@@ -950,7 +950,7 @@
                 }
             }
         },
-        "/blocksByMinute/{channelName}/{hours}": {
+        "/blocksByMinute/{channel_genesis_hash}/{hours}": {
             "get": {
                 "tags": [
                     "Blocks"
@@ -959,9 +959,9 @@
                 "description": "Query to Get Blocks By Minute",
                 "parameters": [
                     {
-                        "name": "channelName",
+                        "name": "channel_genesis_hash",
                         "in": "path",
-                        "description": "genesis_block_hash",
+                        "description": "channel_genesis_hash",
                         "required": true,
                         "type": "string"
                     },
@@ -1000,7 +1000,7 @@
                 }
             }
         },
-        "/blocksByHour/{channelName}/{days}": {
+        "/blocksByHour/{channel_genesis_hash}/{days}": {
             "get": {
                 "tags": [
                     "Blocks"
@@ -1009,9 +1009,9 @@
                 "description": "Query to Get Blocks By Hour",
                 "parameters": [
                     {
-                        "name": "channelName",
+                        "name": "channel_genesis_hash",
                         "in": "path",
-                        "description": "genesis_block_hash",
+                        "description": "channel_genesis_hash",
                         "required": true,
                         "type": "string"
                     },
@@ -1050,7 +1050,7 @@
                 }
             }
         },
-        "/txByOrg/{channelName}": {
+        "/txByOrg/{channel_genesis_hash}": {
             "get": {
                 "tags": [
                     "Blocks"
@@ -1059,9 +1059,9 @@
                 "description": "Query Get Trasaction BY Org",
                 "parameters": [
                     {
-                        "name": "channelName",
+                        "name": "channel_genesis_hash",
                         "in": "path",
-                        "description": "genesis_block_hash",
+                        "description": "channel_genesis_hash",
                         "required": true,
                         "type": "string"
                     }
